# invoice-coding

./: .gitignore  README.md  frontend.js  main.py  pyproject.toml
.cursor/rules/: karpathy-guidelines.mdc
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AppHeader.tsx  HistoryView.tsx  LineItemCard.tsx  MockPdfViewer.tsx  ProcessingPanel.tsx  ResultsView.tsx  UploadPanel.tsx
frontend/src/lib/: api.ts  export.ts  history.ts
scripts/: eval_accuracy.py  recreate_gl_context_view.py  run_invoice.py
sql/: 01_create_gl_coding_history.sql  02_embedding_pipeline.sql  03_search_and_vendor_context.sql  04_ic_lookup.sql  05_prediction_audit_and_evaluation.sql
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.tsx  types.ts
src/frontend/src/api/: client.ts
src/frontend/src/components/: AnalyticsPlaceholder.tsx  DashboardView.tsx  InvoicesView.tsx  KnowledgeView.tsx  ReviewModal.tsx
src/frontend/src/lib/: statusStyles.ts
src/invoice_processing/: __init__.py  analyze_pipeline.py  ankrag_cli.py  batch_cli.py  batch_invoice_extract.py  bq_embeddings_cli.py  bq_gl_lines.py  bq_gl_load_cli.py  bq_invoice_embeddings.py  bq_invoice_extractions.py  bq_load_local_cli.py  bq_rag_suggestions.py  cli.py  gcs_invoice_listing.py  gcs_upload.py  invoice_coding_schema.py  invoice_extraction_schema.py  online_invoice_extract.py  rag_retrieval.py  suggest_status.py
src/invoice_processing/api/: __init__.py  app.py
src/poc_ankrag/: __init__.py  __main__.py  api.py  cloud_clients.py  config.py  ic_resolver.py  matching.py  models.py  pipeline.py  prompts.py  sql_assets.py
tests/: test_api_app.py  test_batch_cli.py  test_batch_invoice_extract.py  test_bq_gl_lines.py  test_bq_invoice_embeddings.py  test_bq_invoice_extractions.py  test_bq_rag_suggestions.py  test_gcs_invoice_listing.py  test_gcs_upload.py  test_ic_resolver.py  test_invoice_coding_schema.py  test_invoice_extraction_schema.py  test_matching.py  test_online_invoice_extract.py  test_prompts_and_pipeline.py  test_rag_retrieval.py  test_suggest_status.py
