[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-processing"
version = "0.1.0"
description = "Invoice processing pipeline utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=2.14.0",
    "google-genai>=1.0.0",
    "google-cloud-bigquery>=3.25.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
invoice-upload-historical = "invoice_processing.cli:main"
invoice-batch-extract = "invoice_processing.batch_cli:main"
invoice-bq-load-jsonl = "invoice_processing.bq_load_local_cli:main"
invoice-bq-load-gl = "invoice_processing.bq_gl_load_cli:main"
invoice-bq-embeddings = "invoice_processing.bq_embeddings_cli:main"
ankrag = "invoice_processing.ankrag_cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
